--- a/part3/blog/package.json
+++ b/part3/blog/package.json
@@ -16,12 +16,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "dotenv": "^9.0.1",
     "express": "^4.17.1",
     "express-async-error": "^0.0.2",
     "express-async-errors": "^3.1.1",
-    "mongoose": "^5.12.8"
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.12.8",
+    "mongoose-unique-validator": "^2.0.3"
   },
   "devDependencies": {
     "eslint": "^7.26.0",
