--- a/part3/blog/package.json
+++ b/part3/blog/package.json
@@ -28,6 +28,7 @@
   },
   "devDependencies": {
     "eslint": "^7.26.0",
+    "eslint-plugin-jest": "^24.3.6",
     "jest": "^26.6.3",
     "nodemon": "^2.0.7",
     "supertest": "^6.1.3"
