--- a/part7/country-hook/package.json
+++ b/part7/country-hook/package.json
@@ -1,17 +1,15 @@
 {
-  "name": "routed-anecdotes",
+  "name": "country-hook",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.7.1",
-    "eslint-plugin-react-hooks": "^4.2.0",
+    "axios": "^0.21.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-router": "^5.2.0",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "^1.1.5",
+    "react-scripts": "4.0.2",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
