--- a/part3/bloglist-frontend/package.json
+++ b/part3/bloglist-frontend/package.json
@@ -6,10 +6,16 @@
     "@testing-library/user-event": "^12.6.3",
     "axios": "^0.21.1",
     "express": "^4.17.1",
+    "nanoid": "^3.1.23",
     "prop-types": "^15.7.2",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-redux": "^7.2.4",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
+    "redix": "^1.0.22",
+    "redux": "^4.1.0",
+    "redux-thunk": "^2.3.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
@@ -45,6 +51,7 @@
     "@testing-library/react": "^11.2.7",
     "cypress": "^7.4.0",
     "eslint-plugin-cypress": "^2.11.3",
-    "eslint-plugin-jest": "^24.3.6"
+    "eslint-plugin-jest": "^24.3.6",
+    "redux-devtools-extension": "^2.13.9"
   }
 }
